Color, spacing and consistency fixes in menu

--- a/frontend/css/app.scss
+++ b/frontend/css/app.scss
@@ -181,7 +181,7 @@
                         display:block;
                         width:100%;
                         height:100%;
-                        padding:$marginSmall $marginNormal;
+                        padding:$marginSmall $marginSmall $marginSmall $marginNormal;
                         text-decoration:none;
                         overflow: hidden;
                         text-overflow:ellipsis;
@@ -202,6 +202,10 @@
                                 font:inherit;
                                 vertical-align:top;
                                 flex:1 1;
+                                
+                                &::-webkit-input-placeholder{
+                                    color: $colorTextMuted!important;
+                                }
                             }
                         }
 
